--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,11 @@
     <title>Portfolio</title>
     <base href="/" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="icon" type="image/x-icon" href="favicon.ico" />
+    <link
+      rel="icon"
+      type="image/x-icon"
+      href="../assets/images/header/LogoMakr-30xL5p.png"
+    />
     <link rel="stylesheet" href="/fonts.scss" />
   </head>
   <body>
